# Industry_Analysis

./: .gitignore  Readme.md  index.html  package-lock.json  package.json
back-end/: README.md  get_abstractData.py  get_mainGraphData.py  get_right_down_data.py  main.py
back-end/data/: abstractData.json  all_data.json  mainGraphData.json  rightDownCharData.json  subGraphData copy 2.json  subGraphData copy.json  subGraphData demo.json  subGraphData huge.json  subGraphData.json  tableData.json
css/: app.86d335c5.css  app.95d753d9.css  app.a297bdda.css  chunk-vendors.3f4072ed.css  chunk-vendors.af55e822.css
data-process/: CMakeLists.txt  README.md  givenGroups.h  graph.h  index.html  main  main.cpp  outputAPI.h  parser.h  path.h  randomOutputAPI.h  subgraph14.json  test.cpp  utils.h
data-process/jsoncpp/: CMakeLists.txt
data-process/outputAPI/: cwd1.json  cwd10.json  cwd2.json  cwd3.json  cwd4-small.json  cwd4.json  cwd5.json  cwd6.json  cwd7.json  cwd8.json  cwd9.json  cwh.json  lxd02.json
data-process/outputAPI/backup/: cwd4.json  cwh.json  lxd01.json
data-process/outputAPI/echarts-data/: ec1.json  ec2.json  ec3.json  ec4.json  ec6.json  ec7.json
data_gen/: data.ts  parser.py  sample.json
front-end/: README.md  package.json  vue.config.js
front-end/src/: App.vue  (+2 more)
js/: app-legacy.c1167329.js  app.44c41127.js  app.762338d2.js  app.7b4809f4.js  app.a6181534.js  canvg-legacy.9857d27b.js  canvg.3c9c532d.js  chunk-vendors.3720f1f1.js  pdfmake.c44ec841.js  xlsx.638b22c9.js  xlsx.c53db84a.js
requirement/: README.md  data.js  data.ts
src/: App.vue  data.ts
(+33 files in other folders)
