project(jsoncpp)
add_library(${PROJECT_NAME}
    ${PROJECT_SOURCE_DIR}/src/json_reader.cpp
    ${PROJECT_SOURCE_DIR}/src/json_value.cpp
    ${PROJECT_SOURCE_DIR}/src/json_valueiterator.inl
    ${PROJECT_SOURCE_DIR}/src/json_writer.cpp
)
target_include_directories(${PROJECT_NAME}
    PUBLIC
    ${PROJECT_SOURCE_DIR}/include
)